# Yuyu-Mind

./: .env.example  .gitignore  README.md  app.go  app_pet_other.go  app_pet_windows.go  go.mod  main.go  main.py  pyproject.toml  requirements-voice.txt  requirements.txt  wails.json
agent/: main.py  tts_fish.py
agent/plugins/: __init__.py
assets/skins/catgirl/: config.json
assets/skins/chino/: config.json
assets/skins/default/: config.json
config/: settings.json
config/personalities/: chino.json  default.json
core/: ai_chat.py  animation.py  bubble.py  chat_input.py  pet_window.py  skin_manager.py  voice_engine.py
docs/: bilibili-live-plugin.md  gpt-sovits-tts.md  netease-music-plugin.md  screen-plugin.md  web-search-plugin.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/models/yumi/: items_pinned_to_model.json  yumi.4096.model3.json  yumi.vtube.json
frontend/src/: App.css  App.tsx  live2d.d.ts  main.tsx  style.css
frontend/src/components/: Live2DStage.tsx
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
utils/: generate_placeholders.py  logger.py  resource_manager.py
